--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
-  color: #333;
+  color: rgb(192, 19, 19);
   text-align: center;
-  font-family: 'Times New Roman';
+  font-family: Arial;
   font-size: 16px;
   margin: 0;
   padding: 0;
